// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup should render 1`] = `
<div
  className="form-group"
/>
`;

exports[`FormGroup should render with children 1`] = `
<div
  className="form-group"
>
  Some child #1
  <div>
    Some child #2
  </div>
</div>
`;
